--- a/.htaccess
+++ b/.htaccess
@@ -42,21 +42,43 @@ RewriteEngine On
     AddOutputFilterByType DEFLATE application/x-javascript
 </IfModule>
 
-# Cache Control
+# Cache Control - Updated untuk Development
 <IfModule mod_expires.c>
     ExpiresActive On
+    # Images - cache longer
     ExpiresByType image/jpg "access plus 1 month"
     ExpiresByType image/jpeg "access plus 1 month"
     ExpiresByType image/gif "access plus 1 month"
     ExpiresByType image/png "access plus 1 month"
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/pdf "access plus 1 month"
-    ExpiresByType text/javascript "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-    ExpiresByType application/x-javascript "access plus 1 month"
-    ExpiresByType application/x-shockwave-flash "access plus 1 month"
     ExpiresByType image/x-icon "access plus 1 year"
+    
+    # CSS dan JS - cache lebih pendek untuk development
+    ExpiresByType text/css "access plus 1 hour"
+    ExpiresByType text/javascript "access plus 1 hour"
+    ExpiresByType application/javascript "access plus 1 hour"
+    ExpiresByType application/x-javascript "access plus 1 hour"
+    
+    # HTML - no cache untuk development
+    ExpiresByType text/html "access plus 0 seconds"
+    
+    # Other files
+    ExpiresByType application/pdf "access plus 1 month"
+    ExpiresByType application/x-shockwave-flash "access plus 1 month"
     ExpiresDefault "access plus 2 days"
+</IfModule>
+
+# Cache Control Headers untuk Development
+<IfModule mod_headers.c>
+    # Force revalidation untuk HTML
+    <FilesMatch "\.(html|htm|php)$">
+        Header set Cache-Control "no-cache, must-revalidate"
+        Header set Pragma "no-cache"
+    </FilesMatch>
+    
+    # CSS dan JS dengan versioning
+    <FilesMatch "\.(css|js)$">
+        Header set Cache-Control "public, max-age=3600"
+    </FilesMatch>
 </IfModule>
 
 # Security Headers
